fixed alignment of text class

--- a/src/app/services/ui-ux/uiux.module.css
+++ b/src/app/services/ui-ux/uiux.module.css
@@ -24,9 +24,12 @@
     position: absolute;
     color: white;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translate(0, -50%);
     left: 19%;
     width: 25%;
+}
+
+.herotext {
     animation: fadein 500ms forwards linear;
 }
 
@@ -182,7 +185,7 @@
     text-align: center;
     width: 800px;
     margin: auto;
-    transform: translateY(0);
+    transform: translate(0, 0);
 }
 
 .sec2 .text p {
@@ -229,7 +232,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    transform: translateY(0);
+    transform: translate(0, 0);
 }
 
 
@@ -297,7 +300,7 @@
 @media screen and (width<1200px) {
     .text {
         top: 50%;
-        transform: translateY(-50%);
+        transform: translate(0, -50%);
         left: 10%;
         width: 90%;
     }
